// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Next: GlobalItem styles BadgeWrapper should return correct styles when size is large 1`] = `
Object {
  "left": "16px",
  "pointerEvents": "none",
  "position": "absolute",
  "top": 0,
  "userSelect": "none",
}
`;

exports[`Navigation Next: GlobalItem styles BadgeWrapper should return correct styles when size is small 1`] = `
Object {
  "left": "20px",
  "pointerEvents": "none",
  "position": "absolute",
  "top": "-4px",
  "userSelect": "none",
}
`;

exports[`Navigation Next: GlobalItem styles ItemBase should return the correct styles when size is large 1`] = `
Object {
  "&:focus": Object {
    "boxShadow": "0 0 0 2px #4C9AFF",
  },
  "alignItems": "center",
  "backgroundColor": "#0065FF",
  "border": 0,
  "borderRadius": "50%",
  "color": "#DEEBFF",
  "cursor": "pointer",
  "display": "flex",
  "fontSize": "inherit",
  "height": "40px",
  "justifyContent": "center",
  "lineHeight": 1,
  "outline": "none",
  "padding": 0,
  "position": "relative",
  "width": "40px",
}
`;

exports[`Navigation Next: GlobalItem styles ItemBase should return the correct styles when size is small 1`] = `
Object {
  "&:focus": Object {
    "boxShadow": "0 0 0 2px #4C9AFF",
  },
  "alignItems": "center",
  "backgroundColor": "#0065FF",
  "border": 0,
  "borderRadius": "50%",
  "color": "#DEEBFF",
  "cursor": "pointer",
  "display": "flex",
  "fontSize": "inherit",
  "height": "32px",
  "justifyContent": "center",
  "lineHeight": 1,
  "outline": "none",
  "padding": 0,
  "position": "relative",
  "width": "32px",
}
`;

exports[`Navigation Next: GlobalItem styles ItemWrapper should return correct styles when size is large 1`] = `Object {}`;

exports[`Navigation Next: GlobalItem styles ItemWrapper should return correct styles when size is small 1`] = `
Object {
  "padding": "4px",
}
`;
